<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aEasy Credit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title_en">aEasy Credit</string>
    <string name="login_title_zh">亚馨信贷</string>
    <string name="login_name">name</string>
    <string name="login_password">password</string>
    <string name="login_ok">login</string>
    <string name="dashboard_example_home_btn_analytics">analytics</string>
    <string name="inspect_list_item_customer_name">、customer name:</string>
    <string name="inspect_list_item_customer_info">customer info:</string>
    <string name="inspect_list_item_inspect_date">inspect date:</string>
    <string name="inspect_list_item_address_title">address:</string>
    <string name="inspect_camera">camera</string>
    <string name="inspect_preview">预览</string>
    <string name="inspect_task">inspect task</string>
    
    <string name="inspect_task_detail">inspect detail</string>
    <string name="inspect_task_detail_num">num：</string>
    <string name="inspect_task_detail_customer_name">customer name:</string>
    <string name="inspect_task_detail_customer_info">customer info:</string>
    <string name="inspect_task_detail_customer_phone">customer phone:</string>
    <string name="inspect_task_detail_customer_address">inspect address:</string>
    <string name="inspect_task_detail_customer_contacts">contacts:</string>
    <string name="inspect_task_detail_customer_contacts_phone">contacts phone:</string>
    <string name="inspect_task_detail_customer_inspect_person">inspect person:</string>
    <string name="inspect_task_detail_customer_inspect_predate">inspect date:</string>
    <string name="inspect_task_detail_customer_inspect_remark">remark:</string>
    <string name="inspect_task_detail_customer_inspect_perceive_report">write perceive report</string>
    <string name="inspect_task_detail_customer_inspect_secret_report">write secret report</string>
    <string name="inspect_login_input_error">please input name and password</string>
    <string name="inspect_login_success">login success</string>
    <string name="inspect_login_fail">login fail</string>
    <string name="inspect_checklogin_fail">check login fail</string>
    <string name="inspect_checklogin_success">check login success</string>
    <string name="inspect_checklogin_fail_timeout">check login fail,please login again</string>
    <string name="inspect_tasklist_request_success">request list success</string>
    <string name="inspect_tasklist_request_fail">request list fail</string>
    <string name="inspect_taskdetail_fail">no data</string>
    
    <string name="inspect_report_secert">secert report</string>
    <string name="inspect_report_perceive">perceive report</string>
    <string name="inspect_report_finishtime">perceive finish time</string>
    <string name="inspect_report_starttime">perceive start time</string>
    <string name="inspect_report_address">inspect address</string>
    <string name="inspect_report_contact">inspect contact</string>
    <string name="inspect_report_contact_phone">contact phone</string>
    <string name="inspect_report_contact_position">contact position</string>
    <string name="inspect_report_contact_company">contact company</string>
    <string name="inspect_report_contact_company_nature">contact company nature</string>
    <string name="inspect_report_contact_company_employee_count">contact company nature employee count</string>
    <string name="inspect_report_contact_ground_area">ground area</string>
    <string name="inspect_report_contact_company_has_logo">has company logo</string>
    <string name="inspect_report_contact_company_has_name">has company name</string>
    <string name="inspect_report_contact_company_business_content">company business content</string>
    <string name="inspect_report_contact_company_scale">company scale</string>
    <string name="inspect_report_contact_product_tool">product tool</string>
    <string name="inspect_report_contact_stock">stock finished or unfinished</string>
    <string name="inspect_report_contact_interview_content">interview content</string>
    <string name="inspect_report_contact_interview_content_hint">interview content</string>
    <string name="inspect_report_contact_inspect_content">inspect content</string>
    <string name="inspect_report_contact_inspect_summary">inspect summary</string>
    <string name="inspect_report_contact_inspect_summary_hint">inspect summary</string>
    <string name="inspect_report_contact_supplement">inspect supplement things</string>
    <string name="inspect_report_contact_upload_photo">inspect upload photo</string>
    <string name="inspect_report_browse">browse</string>
    <string name="inspect_report_submit">submit</string>
    <string name="inspect_report_save">save</string>
    <string name="inspect_report_contact_person">person</string>
    <string name="inspect_report_contact_centiare">centiare</string>
    <string name="inspect_report_photo_selected">%d pictures selected</string>
    <string name="inspect_report_submit_fail">submit fail please retry</string>
    <string name="inspect_report_submit_succ">submit success</string>
    
    <string name="more_than_max">Exceeds the upper limit</string>
    <string name="preview">Preview</string>
    <string name="system_photos">System photos</string>
    <string name="recent_photos">工单照片</string>
    <string name="sure">Sure</string>
	<string name="select_all">Select all</string>
	<string name="unselect_all">cancel all</string>
    <string name="select_photos">Select photos</string>
    <string name="back">Back</string>
    <string name="taking_pictures">Taking Pictures</string>
    <string name="max_img_limit_reached">Cannot select more than %d images</string>
    <string name="common_fail">fail please retry</string>

    <color name="main_back">#ef8122</color>
    <color name="main_back_mask">#7fef8122</color>
    <color name="main_title_background">#ed8231</color>
    <color name="main_dashboard_color">#7d3c24</color>
    <color name="bg">#65BBF6</color>
    <color name="login_bg">#eaeaea</color>
    
    
</resources>
